# idle-core

./: CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  package.rs  package.sh  trance.xml
.github/workflows/: ci.yml  release.yml
crates/idle-upscaler/src/: lib.rs
crates/idle-upscaler/src/cpu/: stretch.rs
crates/trance-dbus/: Cargo.toml
crates/trance-dbus/src/: client.rs  lib.rs
crates/trance-gpu/: Cargo.toml
crates/trance-ipc/: Cargo.toml
crates/trance-upscaler/: Cargo.toml
crates/trance-upscaler/src/: cpu.rs  lib.rs
crates/wayland-idle/: Cargo.toml
crates/wayland-present/: Cargo.toml
crates/wayland-present/src/: presenter.rs
crates/wayland-present/src/overlay/: thread.rs
crates/wayland-present/src/overlay/handlers/: input.rs
crates/wayland-present/src/overlay/state/: mod.rs  overlay.rs
docs/: BOUNDARIES.md  DBUS.md  NAMING.md  SPLIT_TUI.md  creating_plugins.md
idle-api/: Cargo.toml
idle-cli/: Cargo.toml
idle-cli/debian/: changelog
idle-daemon/: Cargo.toml
idle-daemon/assets/packaging/: user-service-lib.sh
idle-daemon/debian/: changelog  postinst
idle-daemon/rpm/: post.sh
idle-daemon/src/daemon/: runtime.rs
idle-daemon/src/presentation/: frame_loop.rs  ipc_session.rs
idle-plugins-all/: Cargo.toml
idle-plugins-all/debian/: changelog
idle-runner/: Cargo.toml
idle-runner/src/: launcher.rs  renderer.rs
idle-runner/src/cell_renderer/: pixels.rs
idle-runner/src/plugin_session/: loading.rs  mod.rs
screensaver-api/: Cargo.toml
screensaver-api/src/: lib.rs  logo_block.rs
screensaver-runner/: Cargo.toml  LINE_LIMITS.md  check_limits.py
screensaver-runner/src/: args.rs  discovery.rs  launcher.rs  launcher_tests.rs  lib.rs  platform_helpers.rs  renderer.rs  screensaver_runner.rs  terminal_guard.rs
screensaver-runner/src/apps/: identity.rs
screensaver-runner/src/core/: logo_block.rs  mod.rs  screen_palette.rs  screensaver.rs
screensaver-runner/src/toolkit/: linux_proc.rs  linux_queries.rs  mod.rs  platform.rs  sys_info.rs  theme_query.rs
trance/: Cargo.toml
trance-api/: Cargo.toml
trance-api/src/: lib.rs  logo_block.rs
trance-applet/: Cargo.toml  README.md
trance-applet/debian/: changelog
trance-applet/resources/: app.desktop  app.metainfo.xml
trance-applet/src/: app.rs  config.rs  daemon_client.rs
trance-applet/src/app/: message.rs  state.rs  update.rs  view.rs
trance-cli/: Cargo.toml
trance-cli/debian/: changelog
trance-cli/src/: bug_report.rs  clean.rs  commands.rs  doctor.rs  doctor_fs.rs  doctor_service.rs  doctor_sys.rs  main.rs  self_update.rs
trance-cli/src/completions/: trance.bash  trance.zsh
trance-daemon/: Cargo.toml
trance-daemon/assets/: idle-daemon.1  idle-daemon.service  io.github.ubermetroid.trance.policy  io.github.ubermetroid.trance.service  trance-daemon.service
trance-daemon/debian/: changelog  postinst  postrm  prerm
trance-daemon/rpm/: post.sh  posttrans.sh  preun.sh
trance-daemon/src/: config.rs  config_watcher.rs  daemon.rs  idle.rs  inhibit.rs  main.rs
trance-daemon/src/controller/: status.rs
trance-daemon/src/daemon/: mod.rs  tick_loop.rs
trance-daemon/src/dbus_server/: auth.rs  mod.rs  screensaver.rs  service.rs  watchers.rs
trance-daemon/src/inhibit/: tests.rs
trance-daemon/src/presentation/: frame_loop.rs  plugin_loop.rs
trance-plugins-all/: Cargo.toml
trance-plugins-all/debian/: changelog
trance-plugins-all/src/: lib.rs
trance-runner/: Cargo.toml  LINE_LIMITS.md  check_limits.py
trance-runner/src/: discovery.rs  launcher.rs  launcher_tests.rs  lib.rs  platform_helpers.rs  plugin_session.rs  sandbox.rs
trance-runner/src/cell_renderer/: atlas.rs  font.rs  mod.rs  pixels.rs
trance-runner/src/cell_renderer/gpu_render/: mod.rs  phases.rs  render.rs
trance-runner/src/core/: logo_block.rs  mod.rs  screen_palette.rs
trance-runner/src/plugin_session/: loading.rs  mod.rs
trance-runner/src/toolkit/: linux_proc.rs  linux_queries.rs  sys_info.rs  theme_query.rs
trance-runner/src/toolkit/sys_info/: mod.rs
trance-tui/: Cargo.toml
trance-tui/src/: lib.rs  main.rs
trance-tui/src/app/: mod.rs
trance/assets/: trance.desktop
trance/src/: lib.rs  main.rs
trance/src/app/: mod.rs  state.rs
trance/src/daemon/: idle.rs  mod.rs
trance/src/ui/: mod.rs
