[package]
name = "trance"
version = "0.1.1"
edition = "2021"
description = "trance - Screensaver management daemon and TUI config tool"
license = "MIT"

[[bin]]
name = "trance"
path = "src/main.rs"

[dependencies]
screensaver-runner = { path = "../screensaver-runner" }
screensaver-api = { path = "../screensaver-api" }
ratatui = { version = "0.30", default-features = false, features = ["crossterm", "termwiz"] }
crossterm = { version = "0.28" }
libc = "0.2"
directories = "5"

[package.metadata.deb]
name = "trance"
maintainer = "Screensavers Developer <dev@local76.org>"
extended-description = "Screensaver management daemon and TUI config tool."
depends = "libc6, xterm"
section = "utils"
priority = "optional"
assets = [
    ["target/release/trance", "usr/bin/trance", "755"],
    ["assets/trance.desktop", "usr/share/applications/trance.desktop", "644"],
    ["assets/trance.png", "usr/share/pixmaps/trance.png", "644"]
]

[package.metadata.generate-rpm]
name = "trance"
version = "0.1.1"
release = "1"
arch = "x86_64"
summary = "trance - Screensaver management daemon and TUI config tool"
description = "Screensaver management daemon and TUI config tool."
license = "MIT"
assets = [
    { source = "target/release/trance", dest = "/usr/bin/trance", mode = "755" },
    { source = "assets/trance.desktop", dest = "/usr/share/applications/trance.desktop", mode = "644" },
    { source = "assets/trance.png", dest = "/usr/share/pixmaps/trance.png", mode = "644" }
]

